# mitsusplit-matter

./: .gitignore  .gitmodules  Makefile
components/esp_matter/: esp_matter_client.cpp  esp_matter_core.cpp
device_hal/device/: CMakeLists.txt
device_hal/device/esp32c3_nodemcu/: device.c  esp_matter_device.cmake
device_hal/device/esp32c3_t_rsc3/: device.c  esp_matter_device.cmake
device_hal/device/include/: device.h
device_hal/led_driver/multigpio/: led_driver.c
device_hal/uart_driver/: CMakeLists.txt
device_hal/uart_driver/esp-idf/: uart_driver.c
device_hal/uart_driver/include/: uart_driver.h
docker/: Dockerfile  entrypoint.sh
examples/light/main/: app_priv.h
examples/zap_light/main/: app_priv.h
src/: CMakeLists.txt
src/main/: app_driver.cpp  app_led_helper.cpp  app_main.cpp  app_priv.h  mitsubishi_msz_driver.cpp  mitsubishi_msz_driver.h
